Make sure --progress_rate is never 0

BUG: 182725
BUG: 185437

svn path=/trunk/extragear/multimedia/k3b/; revision=945919