libk3b/jobs/k3bvideodvdtitletranscodingjob.cpp
@@ -204,10 +204,11 @@ void K3b::VideoDVDTitleTranscodingJob::startTranscode( int pass )
         *d->process << "--nice" << "19";
 
     // we only need 100 steps, but to make sure we use 150
+    int progressRate = qMax( 1, ( int )m_dvd[m_titleNumber-1].playbackTime().totalFrames()/150 );
     if ( d->usedTranscodeBin->version.simplify() >= K3b::Version( 1, 1, 0 ) )
-        *d->process << "--progress_meter" << "2" << "--progress_rate" << QString::number(m_dvd[m_titleNumber-1].playbackTime().totalFrames()/150);
+        *d->process << "--progress_meter" << "2" << "--progress_rate" << QString::number(progressRate);
     else
-        *d->process << "--print_status" << QString::number(m_dvd[m_titleNumber-1].playbackTime().totalFrames()/150);
+        *d->process << "--print_status" << QString::number(progressRate);
 
     // the input
     *d->process << "-i" << m_dvd.device()->blockDeviceName();
